Fixed NavBar Overflow Mobile View

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
 .App {
   text-align: center;
-  width: 100vw;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  /* width: 100vw; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
