--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -6,6 +6,7 @@
 .HomePageMain img {
     height: 90vh;
     object-fit: cover;
+    width: 100%;
 }
 
 
